<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:background="@drawable/bottombar_background">
    <TextView
        android:id="@+id/tool_detail_bottombar_photo_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom"
        android:clickable="true"
        android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_edit_off"
        android:textAppearance="@style/TextLightGreyAndRed"
        android:text="@string/tool_detail_bottombar_photoedit"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1px"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bottombar_indicator"/>
    <TextView
        android:id="@+id/tool_detail_bottombar_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom"
        android:clickable="true"
        android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_filter"
        android:textAppearance="@style/TextLightGreyAndRed"
        android:text="@string/tool_detail_bottombar_filter"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1px"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bottombar_indicator"/>
    <TextView
        android:id="@+id/tool_detail_bottombar_sticker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom"
        android:clickable="true"
        android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_sticker"
        android:textAppearance="@style/TextLightGreyAndRed"
        android:text="@string/tool_detail_bottombar_sticker"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1px"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bottombar_indicator"/>
    <TextView
        android:id="@+id/tool_detail_bottombar_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_subtitle"
        android:textAppearance="@style/TextLightGreyAndRed"
        android:text="@string/tool_detail_bottombar_subtitle"/>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1px"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bottombar_indicator"/>
    <TextView
        android:id="@+id/tool_detail_bottombar_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_text"
        android:textAppearance="@style/TextLightGreyAndRed"
        android:text="@string/tool_detail_bottombar_text"/>
</LinearLayout>