<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/tool_detail_editor_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/tool_detail_editor_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="24dp"/>
    <!-- 나중엔 이부분은 블러된 배경을 쓰는 것도 좋겠다. 투명디스플레이, 유리같은 느낌으로 -->
    <FrameLayout
        android:id="@+id/tool_detail_editor_fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- TODO [디자인]아이콘 크기 똑같게 만들어야. 그래야 글씨 크기 키워도 한줄로 정렬됨 -->
    <LinearLayout
        android:id="@+id/tool_detail_editor_bottombar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:background="@drawable/bottombar_background">
        <TextView
            android:id="@+id/tool_detail_bottombar_photo_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:clickable="true"
            android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_edit"
            android:textAppearance="@style/TextLightGreyAndRed"
            android:text="@string/tool_detail_bottombar_photoedit"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bottombar_indicator"/>
        <TextView
            android:id="@+id/tool_detail_bottombar_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:clickable="true"
            android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_filter"
            android:textAppearance="@style/TextLightGreyAndRed"
            android:text="@string/tool_detail_bottombar_filter"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bottombar_indicator"/>
        <TextView
            android:id="@+id/tool_detail_bottombar_sticker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:clickable="true"
            android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_sticker"
            android:textAppearance="@style/TextLightGreyAndRed"
            android:text="@string/tool_detail_bottombar_sticker"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bottombar_indicator"/>
        <TextView
            android:id="@+id/tool_detail_bottombar_subtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:clickable="true"
            android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_subtitle"
            android:textAppearance="@style/TextLightGreyAndRed"
            android:text="@string/tool_detail_bottombar_subtitle"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bottombar_indicator"/>
        <TextView
            android:id="@+id/tool_detail_bottombar_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:clickable="true"
            android:drawableTop="@drawable/tool_detail_editor_bottombar_btn_text"
            android:textAppearance="@style/TextLightGreyAndRed"
            android:text="@string/tool_detail_bottombar_text"/>
    </LinearLayout>
</LinearLayout>