<?xml version="1.0" encoding="utf-8"?>
<!-- 코드에서 실제로 한 화면의 크기와 일치하게 만들어야 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tool_upperpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/tool_background_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/tool_padding"
        android:orientation="vertical"
        android:background="@drawable/tool_background_1">
        <!-- TODO 삼각형 추가 -->
        <View
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/shape_triangle"/>
        <TextView
            android:id="@+id/tool_info_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextDarkGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tool_info_caption"/>
        <LinearLayout
            android:id="@+id/tool_info_title_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_info_caption"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tool_title_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextLightGrey"
                android:textStyle="bold"
                android:text="@string/tool_info_title_caption"/>
            <EditText
                android:id="@+id/tool_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:imeOptions="actionNext"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/Coo_DarkGrey"
                android:background="@drawable/shape_background_white_with_grey_stroke"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tool_info_time_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_info_title_group"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tool_time_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextLightGrey"
                android:textStyle="bold"
                android:text="@string/tool_info_time_caption"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/recipe_info_icon_cookingtime"/>
            <!-- TODO 시간, 테마, 재료는 텍스트를 직접 입력할 수 없음. onPressed 이펙트 효과 주어야 -->
            <EditText
                android:id="@+id/tool_info_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:enabled="false"
                android:clickable="true"
                android:textColor="@color/Coo_DarkGrey"
                android:background="@drawable/shape_background_white_with_grey_stroke"/>
        </LinearLayout>
        <!-- 오 나의 멍청함이여..EditText는 도저히 이벤트처리가 안되서 만든 터치영역..
        커스텀뷰로 하면 되긴 하겠지만 클래스 만들기 싫어.. 무거워.. -->
        <View
            android:id="@+id/tool_info_time_area"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignBottom="@id/tool_info_time_group"/>
        <LinearLayout
            android:id="@+id/tool_info_theme_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_info_time_group"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tool_theme_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextLightGrey"
                android:textStyle="bold"
                android:text="@string/tool_info_theme_caption"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/recipe_info_icon_cookingtime"/>
            <EditText
                android:id="@+id/tool_info_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/Coo_DarkGrey"
                android:background="@drawable/shape_background_white_with_grey_stroke"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tool_info_ingredient_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_info_theme_group"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tool_ingredient_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextLightGrey"
                android:textStyle="bold"
                android:text="@string/tool_info_ingredient_caption"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/recipe_info_icon_cookingtime"/>
            <EditText
                android:id="@+id/tool_info_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/Coo_DarkGrey"
                android:background="@drawable/shape_background_white_with_grey_stroke"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tool_info_source_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_info_ingredient_group"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tool_source_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextLightGrey"
                android:textStyle="bold"
                android:text="@string/tool_info_source_caption"/>

            <EditText
                android:id="@+id/tool_info_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/Coo_DarkGrey"
                android:background="@drawable/shape_background_white_with_grey_stroke"/>
        </LinearLayout>
    </RelativeLayout>
    <!-- TODO 배경 포샵으로 정확히 잘라내서 하기(이어지게끔 잘라낸 부분들로 위 배경도 모두 바꿔서) -->
    <View
        android:id="@+id/tool_background_link_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/tool_link_1"/>
    <RelativeLayout
        android:id="@+id/tool_background_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tool_padding"
        android:background="@drawable/tool_background_2_pt">
        <View
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_triangle"/>
        <!-- 이상하게 drawableLeft를 하면 없어져서 안보인다.. 크기조절을 어떻게 해도.. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextDarkGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tool_photo_load_image"/>
        <TextView
            android:id="@+id/tool_photo_camera"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:clickable="true"
            android:drawableTop="@drawable/tool_btn_camera_icon"
            android:textAppearance="@style/TextLightGrey"
            android:text="@string/tool_photo_camera"/>
        <TextView
            android:id="@+id/tool_photo_album"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tool_photo_camera"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:clickable="true"
            android:drawableTop="@drawable/tool_btn_album_icon"
            android:textAppearance="@style/TextLightGrey"
            android:text="@string/tool_photo_album"/>
    </RelativeLayout>
    <View
        android:id="@+id/tool_background_link_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/tool_link_2"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/tool_background_3_pt">
        <View
            android:id="@+id/tool_triangle_3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="@dimen/tool_padding"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_triangle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="28dp"
            android:textAppearance="@style/TextDarkGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tool_making_title_caption"/>
    </RelativeLayout>
</LinearLayout>